--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>education</groupId>
-    <artifactId>essentials</artifactId>
+    <artifactId>Tinkoff_Java</artifactId>
     <version>${revision}</version>
     <packaging>jar</packaging>
 
